<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_style"
        android:orientation="vertical">
        <utils.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Вид строителство:"
            android:textColor="@color/main_color_500"
            android:textSize="16sp"
            app:typeface="robotoLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/main_color_500" />

        <LinearLayout
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/buildTypeProperty"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/all_text"
                android:textColorHint="@color/material_lime_700"
                android:textColor="@color/material_lime_700"
                android:singleLine="true"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_style"
        android:orientation="vertical">
        <utils.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Година на строителство:"
            android:textColor="@color/main_color_500"
            android:textSize="16sp"
            app:typeface="robotoLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/main_color_500" />

        <LinearLayout
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <EditText
                android:id="@+id/yearFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/from"
                android:textAlignment="center"
                android:textColor="@color/material_lime_700"
                android:singleLine="true"
                android:textSize="16sp"
                android:maxLength="10"
                android:inputType="number"
                android:layout_weight=".5"
                android:background="@drawable/apptheme_edit_text_holo_light"/>

            <EditText
                android:id="@+id/yearTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/to"
                android:textAlignment="center"
                android:textColor="@color/material_lime_700"
                android:singleLine="true"
                android:textSize="16sp"
                android:maxLength="10"
                android:inputType="number"
                android:layout_weight=".5"
                android:background="@drawable/apptheme_edit_text_holo_light"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_style"
        android:orientation="vertical">
        <utils.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Особености:"
            android:textColor="@color/main_color_500"
            android:textSize="16sp"
            app:typeface="robotoLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/main_color_500" />

        <LinearLayout
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/extriProperty"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/all_text"
                android:textColorHint="@color/material_lime_700"
                android:textColor="@color/material_lime_700"
                android:singleLine="true"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_style"
        android:orientation="vertical">
        <utils.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="ТЕЦ:"
            android:textColor="@color/main_color_500"
            android:textSize="16sp"
            app:typeface="robotoLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/main_color_500" />

        <Spinner
            android:id="@+id/tec"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_style"
        android:orientation="vertical">
        <utils.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Тел.:"
            android:textColor="@color/main_color_500"
            android:textSize="16sp"
            app:typeface="robotoLight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/main_color_500" />

        <Spinner
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>